--- a/My_E-com/src/main/resources/templates/form.html
+++ b/My_E-com/src/main/resources/templates/form.html
@@ -1,5 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://kit.fontawesome.com/323f4aa369.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/form.css">
 <script src="/formvalidate.js"></script>
