--- a/My_E-com/src/main/resources/static/css/about.css
+++ b/My_E-com/src/main/resources/static/css/about.css
@@ -26,25 +26,27 @@ h2{
 	padding-left: 10px;}
 
 p{
- margin-left: 31%;
-	font-family:Verdana, Geneva, Tahoma, sans-serif;
-	font-size: medium;
-	font-style: italic;
-	padding: 30px;
-	line-break: auto;
-	line-height: 1cm;
-	color: black;
-	font-weight: bolder;
-		padding-left: 10px;
-		background-color: white;
-	 border-radius: 8px;
+    margin-left: 31%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: large;
+    /* font-style: italic; */
+    font-style: normal;
+    padding: 30px;
+    line-break: auto;
+    line-height: 1cm;
+    color: #007a4f;
+    font-weight: 600;
+    padding-left: 10px;
+    background-color: transparent;
+    /* background-color: white; */
+    border-radius: 8px;
 
 }
 h3{
 	font-family: Arial, Helvetica, sans-serif;
 		 margin-left: 31%;
 color:red;
-background-color: white;
+
 padding-left: 8px;
 
 	  width:35%;
@@ -85,3 +87,87 @@ padding-left: 8px;
 .head{
 		 margin-left: 31%;
 	}
+	
+@media only screen and (max-width:768px){
+	.head {
+		margin-top: 20%;
+     
+}
+body{
+	background-image: url("/css/images/aboutback.jpg");
+	 background-size: 100% auto; /* Stretch the image to cover the full width */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
+  background-position: center;
+
+
+}
+	h1 {
+		text-align: center;
+    color: red;
+    /* width: 50%; */
+    width: auto;
+    font-size: x-large;
+    margin: auto;
+    /* margin-left: 470px; */
+    border: 2px solid transparent;
+    border-radius: 20px;
+    padding: 5%;
+}
+.head {
+    color: firebrick;
+    padding: 10% 2%;
+     margin: auto; 
+       text-align: center;
+    /* margin-top: 20%; */
+    /* margin-left: 31%; */
+}
+p {
+   
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: small;
+    /* font-style: italic; */
+    font-style: normal;
+    width: auto;
+    padding: 2%;
+    margin:auto;
+    padding: 3%;
+    line-break: auto;
+    line-height: 0.8cm;
+    color: #007a4f;
+    font-weight: 600;
+    /* padding-left: 10px; */
+    /* background-color: white; */
+    border-radius: 8px;
+}
+	.sets {
+    font-family: Arial, Helvetica, sans-serif;
+    /* margin-left: 31%; */
+    color: red;
+    padding: 2%;
+    font-size: small;
+    /* width: 15%; */
+    border: 2px solid transparent;
+    border-radius: 8px;
+    /* padding-left: 6px; */
+   text-align: center;
+   width: auto;
+    padding: 2%;
+    margin:auto;
+	
+	}
+	h4 {
+    /* margin-left: 31%; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: red;
+    /* padding-left: 8px; */
+    /* width: 65%; */
+    width: auto;
+    padding: 2%;
+    margin:auto;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    text-align: center;
+    }
+	
+	}	
+	
