--- a/My_E-com/src/main/resources/static/css/contact.css
+++ b/My_E-com/src/main/resources/static/css/contact.css
@@ -2,8 +2,7 @@ body{
 	background-image: url("/css/images/contact-us.jpg");
 	 background-size: 100% auto; /* Stretch the image to cover the full width */
   background-repeat: no-repeat; /* Prevent the image from repeating */
-  background-position: center;
-  background-attachment:fixed;
+
 	
 }
 
@@ -18,7 +17,7 @@ p{
 	font-weight: 500px;
 	font-size: 20px;
 	font-style: oblique;
-	line-height: 1.5cm;
+	line-height: 1.2cm;
 	color: black;
 	
 }
@@ -28,5 +27,38 @@ h3{
 
 	
 	margin-right: 35%;
-padding-left: 6px;
+
+}
+@media only screen and (max-width:768px){
+	
+	h2{ text-align: center;
+	color:rgb(0, 0, 255);
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:large;
+	font-weight: 600;
+	padding-left: 6px;
+	
+	}
+
+p{
+
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: small;
+    padding: 5%;
+    text-align: center;
+    /* font-style: oblique; */
+    margin: auto;
+    line-height: 0.6cm;
+    color: black;
+	
+}
+h3{
+	font-family: Arial, Helvetica, sans-serif;
+	color: rgb(0, 0, 255);
+ margin: auto;
+	text-align: center;
+
+}
 }
