--- a/My_E-com/src/main/resources/static/css/mycss.css
+++ b/My_E-com/src/main/resources/static/css/mycss.css
@@ -185,7 +185,7 @@ body{
       /* width: 5%; */
       /* height: 5%; */
       color: white;
-      font-size: xx-large;
+      font-size: x-large;
       /* margin-right: auto; */
       /* margin-left: 1%; */
       width: auto;
